ext: fix deprecated URL API use in external library